# custom_nodes

./: CMakeLists.txt  README.md  package.xml  pending_messages.jsonl
Homography/: average_homography2.txt  average_homography_640.txt  config.xml
launch/: APP.py  main_launch.py  rviz2_config3.rviz  rviz2_config4.rviz
launch/antiguo-jetson/: APP.py
launch/nodos/: AreaSegmentationOptions.py  BiomassOptions.py  GPSCoordinatesOptions.py  NDVIOptions.py  NodeLauncher.py  NodeOptions.py  YOLOOptions.py  __init__.py
scripts/: GPS_coordinates_node.py  area_segmentation_node.py  biomass_node.py  crop_light_state_node.py  crop_light_state_node_ONLYPLANTS.py  csv_safecopy.py  higrometer_node.py  record_temperature.py  ros2_mqtt_publisher.py  rosbag_recording.py  sun_shadow_calibration.py  temperature_cswi_calculation.py  utm_base_link_xy.py
